[package]
name = "largest-remainder-method"
version = "0.1.1"
authors = ["u2 <zhangyaning1985@gmail.com>"]
description = "The largest remainder method"
license = "MIT"
repository = "https://github.com/u2/largest-remainder-method.rs"
keywords = ["hare-niemeyer-method", "hamilton-method", "voting", "elections"]
categories = ["algorithms"]
